#52 fix description column wrapping

--- a/ClientApp/src/app/areas/measurement/components/measurement/measurement.style.styl
+++ b/ClientApp/src/app/areas/measurement/components/measurement/measurement.style.styl
@@ -73,6 +73,7 @@
         p
             margin 0
             padding 0
+            word-break break-word
 
     &__actions
         grid-area Actions
